Updated Lab 1 Files
Test one to check heroku

--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -1,37 +1,61 @@
-YOUR NAME Lab 1: Intro to HTML
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;1,200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="lab-1-styles.css">
+    <title>Jesse Anderson's Lab #1</title>
+</head>
+    <body>
+        <h1>
+            Jesse Anderson Lab 1: Intro to HTML
+        </h1>
+        <h2>
+            First, the basics.
+        </h2>
+        <p class="paragraph-header">My favorite books</p>
+        <ul>
+            <li>A Knock at Midnight, <span>Brittany K. Barnett</span></li>
+            <li>Wonder, <span>R. J. Palacio</span></li>
+            <li>Love in the Time of Cholera, <span>Gabriel García Márquez</span></li>
+        </ul>
+        <p class="paragraph-header">My favorite albums</p>
+        <ol>
+            <li>Loose, <span>Jack Harlow</span></li>
+            <li>If Beale Street Could Talk, <span>Multiple Artists</span></li>
+            <li>Paul, <span>PJ Morton</span></li>
+            <li>Currency of Man, <span>Melody Gardot</span></li>
+            <li>Once Again, <span>John Legend</span></li>
+        </ol>
+        <h2>
+            Let's Try Some Inline Elements
+        </h2>
+        <p>Sometimes you want to <em>draw attention to something</em> in a line of text.</p>
+        <p>Sometimes you want to <strong>strongly emphasize something</strong> in the text.</p>
+        <p>Sometimes you want to <strong><em>do both.</em></strong></p>
 
-First, the basics.
-
-You need the following to build your website.
-
-HTML and CSS
-Javascript
-Node.js
-And other web development frameworks
-
-You should list your top 3 goals for the class below.
-
-Learn front-end web design
-Learn new programming languages
-Learn how to work with others in a technical space
-Learn popular web dev frameworks
-
-Let's Try Some Inline Elements
-
-Sometimes you want to draw attention to something in a line of text.
-
-Sometimes you want to strongly emphasize something in the text.
-
-Sometimes you want to do both.
-
-Empty Elements
-
-Soft line breaks can't wrap anything. Neither can image tags, or hard lines.
-Add a hard line under here, and make sure you've used some soft line breaks to match your page to the sample.
-
-Images 
-
-Don't forget to use alt text on your images. It's important for accessibility.
-
-Include a hyperlink here to your github repository for class.
-If you want your repo to be private, be sure to invite Prof A as a "collaborator."
+        <h3>
+            Empty Elements
+        </h3>
+        <p>
+            Soft line breaks can't wrap anything. <br> Neither can image tags, or hard lines. <br> Add a hard line under here, and make sure you've used some soft line breaks to match your page to the sample.</p>
+        <hr>
+        <h2>
+            Images
+        </h2>
+        <p>Include the four images in the /images folder below</p>
+        <p>Don't forget to use alt text on your images. It's important for accessibility.
+        </p>
+        <img src="images/onigiri_1.png" alt="This depicts an oni girl about to eat some seaweed.">
+        <img src="images/onigiri_2.png" alt="This depicts an oni girl eating some seaweed.">
+        <img src="images/onigiri_3.png" alt="This depicts an oni girl looking embarrassed with rosy cheeks.">
+        <img src="images/onigiri_4.png" alt="This depicts an oni girl smiling happily to the object to her left.">
+        <hr>
+        <a href="https://github.com/jesseandersonumd/INST377-Lab-Work" target="_blank">Include a hyperlink here to your github repository for class.</a>
+        <p>If you want your repo to be private, be sure to invite Prof A as a "collaborator."</p>
+    </body>
+</html>
