v2 with CSS styling and mochi images

--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -6,17 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;1,200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="lab-1-styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500&display=swap" rel="stylesheet">    <link rel="stylesheet" href="lab-1-styles.css">
     <title>Jesse Anderson's Lab #1</title>
 </head>
     <body>
+        
         <h1>
             Jesse Anderson Lab 1: Intro to HTML
         </h1>
         <h2>
-            First, the basics.
+            A bit about me
         </h2>
+        <p>
+            A <span>creative data scientist</span> with a <strong>focus</strong> on human-centered informatics, big data, and social justice
+        </p>
+        
         <p class="paragraph-header">My favorite books</p>
         <ul>
             <li>A Knock at Midnight, <span>Brittany K. Barnett</span></li>
@@ -32,17 +36,25 @@
             <li>Once Again, <span>John Legend</span></li>
         </ol>
         <h2>
-            Let's Try Some Inline Elements
+            Why I'm excited to take this class
         </h2>
-        <p>Sometimes you want to <em>draw attention to something</em> in a line of text.</p>
-        <p>Sometimes you want to <strong>strongly emphasize something</strong> in the text.</p>
-        <p>Sometimes you want to <strong><em>do both.</em></strong></p>
+        <p>I am fascinated by <em>accessible</em> web development and always want to learn more.</p>
+        <p>I am excited to learn more about how humans interact <strong>with technical systems</strong> in different ways</p>
+        <p>I want to explore the different ways that we can <strong><em>support users when navigating different websites for the first time.</em></strong></p>
 
-        <h3>
-            Empty Elements
-        </h3>
+        <h2>
+            My favorite poem
+        </h2>
         <p>
-            Soft line breaks can't wrap anything. <br> Neither can image tags, or hard lines. <br> Add a hard line under here, and make sure you've used some soft line breaks to match your page to the sample.</p>
+            Then softly falls the word <br>
+            Of one beyond a name, <br>
+            "Peace only comes to him <br>
+            Who guards his life from shame, — <br>
+            "Who gives his heart to love, <br> 
+            And holding truth for guide, <br>
+            Girds him with fearless strength, <br>
+            That freedom may abide." <br>
+            <span>- Bliss Carman</span>
         <hr>
         <h2>
             Images
@@ -50,12 +62,11 @@
         <p>Include the four images in the /images folder below</p>
         <p>Don't forget to use alt text on your images. It's important for accessibility.
         </p>
-        <img src="images/onigiri_1.png" alt="This depicts an oni girl about to eat some seaweed.">
-        <img src="images/onigiri_2.png" alt="This depicts an oni girl eating some seaweed.">
-        <img src="images/onigiri_3.png" alt="This depicts an oni girl looking embarrassed with rosy cheeks.">
-        <img src="images/onigiri_4.png" alt="This depicts an oni girl smiling happily to the object to her left.">
+        <img src="images/mochi.jpg" alt="This depicts a happy mochi character as a jpg.">
+        <img src="images/mochi.png" alt="This depicts a happy mochi character as a png.">
+        <img src="images/mochi.svg" alt="This depicts a happy mochi character as a svg, with straight lines tangent to the edge of the circle.">
+        <img src="images/mochi.gif" alt="This depicts a happy mochi character as a gif bouncing up and down.">
         <hr>
-        <a href="https://github.com/jesseandersonumd/INST377-Lab-Work" target="_blank">Include a hyperlink here to your github repository for class.</a>
-        <p>If you want your repo to be private, be sure to invite Prof A as a "collaborator."</p>
+        <a href="https://github.com/jesseandersonumd/INST377-Lab-Work" target="_blank">A hyperlink to my github repository for class.</a>
     </body>
 </html>
