--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -1,40 +1,89 @@
-YOUR NAME Lab 2: Intro to HTML
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <div class="wrapper default">
+            <h1 class="title">Jesse Anderson Lab 2: CSS Selectors</h1>
+            <nav>
+                <a href="selectors.html">
+                    Selectors
+                </a>
+                <a href="index.html">
+                    Main Page
+                </a>
+            </nav>
+            <h2 class="subtitle">First, the basics.</h2>
+            <p>You need the following to build your website.</p>
+            <div class="section_1">
+                <div>
+                    <ul>
+                        <li>HTML and CSS</li>
+                        <li>Javascript</li>
+                        <li>Node.js</li>
+                        <li>And other web development frameworks</li>
+                    </ul>
+                </div>
+                <div>
+                    <p>You should list your top 3 goals for the class below.</p>
+                    <ol>
+                        <li>Learn front-end web design</li>
+                        <li>Learn new programming languages</li>
+                        <li>Learn how to work with others in a technical space</li>
+                        <li>Learn popular web dev frameworks</li>
+                    </ol>
+                </div>
+            </div>
+            <div class="section_2">
+                <h2 class=".subtitle">Let's Try Some Inline Elements</h2>
+                <p>Sometimes you want to <em>draw attention to something</em> in a line of text.</p>
+                <p>Sometimes you want to <strong>strongly emphasize something</strong> in the text.</p>
+                <p>Sometimes you want to <em><strong>do both.</strong></em></p>
+            </div>
+            <div class="section_3">
+                <h3>Empty Elements</h3>
+                <p>Soft line breaks can't wrap anything. <br>Neither can image tags, or hard lines.<br>
+                Add a hard line under here, and make sure you've used some soft line breaks to match your page to the sample.
+                </p>
+                <hr>
+            </div>
+            <div class="section_3">
+                <div class="section_4">
+                    <div class="text">
+                        <h1>Images</h1>
+                        <p>Include the four images in the /images folder below</p>
+                        <p>Don't forget to use alt text on your images. It's important for accessibility.</p>
+                    </div>
+                    <div>
+                        <div class="slides">
+                            <img src="images/onigiri_1.png" alt="This is an oni girl eating seaweed with their tounge out. ">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            <div>
+                <a href="https://github.com/jesseandersonumd/INST377-Lab-Work" target="_blank">A hyperlink to my github repository for class.</a>
+                <p>If you want your repo to be private, be sure to invite Prof A as a "collaborator."</p>
+            </div>
+        </div>
+        
+    </body>
+</html>
 
-Selectors
-Main Page
 
-First, the basics.
 
-You need the following to build your website.
 
-HTML and CSS
-Javascript
-Node.js
-And other web development frameworks
 
-You should list your top 3 goals for the class below.
 
-Learn front-end web design
-Learn new programming languages
-Learn how to work with others in a technical space
-Learn popular web dev frameworks
 
-Let's Try Some Inline Elements
 
-Sometimes you want to draw attention to something in a line of text.
 
-Sometimes you want to strongly emphasize something in the text.
 
-Sometimes you want to do both.
 
-Empty Elements
 
-Soft line breaks can't wrap anything. Neither can image tags, or hard lines.
-Add a hard line under here, and make sure you've used some soft line breaks to match your page to the sample.
 
-Images 
 
-Don't forget to use alt text on your images. It's important for accessibility.
+ 
 
-Include a hyperlink here to your github repository for class.
-If you want your repo to be private, be sure to invite Prof A as a "collaborator."
